--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
-loom.mappings.channel=yarn
-loom.mappings.version=1.21.8+build.1
-minecraft.version=1.21.8
+minecraft_version=1.21.8
+loader_version=0.18.4
+yarn_mappings=1.21.8+build.1
 java.version=21
+fabric_version=0.133.4+1.21.8
+cloth_config_version=21.11.153
+modmenu_version=18.0.0-alpha.5
